"added cursor adapter class for listview, provider to implement database methods and cursor loader in catalog activity to update listview with database items"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,12 @@
         <activity
             android:name=".EditorActivity"
             android:parentActivityName=".CatalogActivity"></activity>
-        <activity android:name=".ItemActivity"></activity>
+        <activity
+            android:name=".ItemActivity"></activity>
+        <provider
+            android:authorities="com.example.gerin.inventory"
+            android:name=".data.ItemProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
