"modified editorActivity to allow user to obtain image from gallery and convert to bitmap"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,4 +34,7 @@
             android:exported="false"/>
     </application>
 
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 </manifest>
