--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+//    external libraries
     implementation 'org.apmem.tools:layouts:1.10@aar'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    implementation 'com.github.mancj:MaterialSearchBar:0.7.6'
 }
